[package]
name = "no_context"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0.12.4"
reqwest = { version = "0.11.13", features = ["blocking"] }
regex = "1"
json = "0.12.4"
rand = "0.8.5"
actix-web = "4"
serde = { version = "1.0.152", features = ["derive"] }
simple-log = "1.6.0"
